--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello nachota corta, trolo el que lee</h1>
+<p>I'm hosted with el enzo bien piola.</p>
 </body>
 </html>
